Remove `os-map` module and completely adopt MapLibre Compose (#16)